tests/ui/coverage-attr/no-coverage.stderr
error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:9:1
   |
LL |   #[coverage(off)]
   |   ^^^^^^^^^^^^^^^^
LL | / trait Trait {
LL | |     #[coverage(off)]
LL | |     const X: u32;
...  |
LL | |     type U;
LL | | }
   | |_- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:41:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     let _ = ();
   |     ----------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:45:9
   |
LL |         #[coverage(off)]
   |         ^^^^^^^^^^^^^^^^
LL |         () => (),
   |         -------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:49:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     return ();
   |     --------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:11:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     const X: u32;
   |     ------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:14:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     type T;
   |     ------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:24:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     type T = Self;
   |     -------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:27:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     type U = impl Trait;
   |     -------------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:32:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     static X: u32;
   |     -------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:35:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     type T;
   |     ------- not a function or closure

error: unconstrained opaque type
  --> $DIR/no-coverage.rs:28:14
   |
LL |     type U = impl Trait;
   |              ^^^^^^^^^^
   |
   = note: `U` must be used in combination with a concrete type within the same impl

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0788`.
